RESOLVED FIXED133646
REGRESSION (r169681): Three tests are broken
https://bugs.webkit.org/show_bug.cgi?id=133646
Summary REGRESSION (r169681): Three tests are broken
Alexey Proskuryakov
Reported 2014-06-09 10:14:14 PDT
<http://trac.webkit.org/changeset/169681> broke three tests on Mountain Lion and Mavericks: compositing/geometry/ancestor-overflow-change.html compositing/layer-creation/overlap-animation-container.html platform/mac-wk2/tiled-drawing/fixed/absolute-inside-fixed.html
Attachments
proposed fix (16.46 KB, patch)
2014-06-09 10:20 PDT, Alexey Proskuryakov
thorton: review+
Alexey Proskuryakov
Comment 1 2014-06-09 10:20:37 PDT
Created attachment 232709 [details] proposed fix
WebKit Commit Bot
Comment 2 2014-06-09 10:22:55 PDT
Attachment 232709 [details] did not pass style-queue: ERROR: Source/WebCore/rendering/RenderThemeMac.h:125: Missing space before { [whitespace/braces] [5] ERROR: Source/WebCore/rendering/RenderThemeMac.h:166: Missing space before { [whitespace/braces] [5] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2014-06-09 11:38:26 PDT
Comment on attachment 232709 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=232709&action=review > Source/WebCore/rendering/RenderThemeMac.mm:305 > +int RenderThemeMac::platformFocusRingMaxWidth() const should we rename this to be platformFocusRingMinWidth, since it is max'd with the actual width?
Alexey Proskuryakov
Comment 4 2014-06-09 11:45:06 PDT
alan
Comment 5 2015-08-18 08:44:45 PDT
Note You need to log in before you can comment on or make changes to this bug.